--- a/python/thirdweb-mcp/pyproject.toml
+++ b/python/thirdweb-mcp/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "thirdweb-mcp"
-version = "0.0.1-alpha2"
+version = "0.1.1"
 description = "thirdweb MCP"
 authors = ["thirdweb <support@thirdweb.com>"]
 readme = "README.md"
@@ -10,7 +10,7 @@ packages = [{ include = "src" }]
 python = "^3.10"
 mcp = "^1.3.0"
 click = "^8.1.8"
-thirdweb-ai = {version = "0.0.1", extras = ["mcp"]}
+thirdweb-ai = {version = "0.1.1", extras = ["mcp"]}
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.9.10"
