--- a/.github/workflows/publish_pypi_thirdweb_mcp.yaml
+++ b/.github/workflows/publish_pypi_thirdweb_mcp.yaml
@@ -17,19 +17,16 @@ jobs:
       id-token: write
 
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
     - name: Install Poetry
-      uses: snok/install-poetry@v1
+      run: pipx install poetry==1.8.5
+
+    - name: Set up Python 3.10
+      uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5.4.0
       with:
-        version: latest
-        virtualenvs-create: true
-        virtualenvs-in-project: true
+        python-version: '3.10'
+        cache: 'poetry'
 
     - name: Install dependencies
       run: poetry install --only main
@@ -38,7 +35,7 @@ jobs:
       run: poetry build
 
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@release/v1
+      uses: pypa/gh-action-pypi-publish@release/76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_KEY }}
