--- a/python/examples/adapter_autogen/pyproject.toml
+++ b/python/examples/adapter_autogen/pyproject.toml
@@ -1,16 +1,18 @@
-[tool.poetry]
+[project]
 name = "thirdweb-ai-examples-autogen"
 version = "0.1.0"
 description = "Example of using thirdweb_ai with AutoGen"
-authors = ["thirdweb <support@thirdweb.com>"]
-package-mode = false
+authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
+requires-python = "~=3.10"
+dependencies = [
+    "thirdweb-ai[autogen]",
+    "autogen-agentchat>=0.4.0,<0.5",
+    "autogen-ext[openai]>=0.4.0,<0.5",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-thirdweb-ai = { version = "*", extras = ["autogen"] }
-autogen-agentchat = "^0.4.0"
-autogen-ext = { version = "^0.4.0", extras = ["openai"] }
+[tool.uv]
+package = false
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api" 
+requires = ["hatchling"]
+build-backend = "hatchling.build"
