--- a/python/examples/adapter_coinbase_agentkit/pyproject.toml
+++ b/python/examples/adapter_coinbase_agentkit/pyproject.toml
@@ -1,18 +1,20 @@
-[tool.poetry]
+[project]
 name = "thirdweb-ai-examples-coinbase-agentkit"
 version = "0.1.0"
 description = "Example of using thirdweb_ai with Coinbase AgentKit"
-authors = ["thirdweb <support@thirdweb.com>"]
-package-mode = false
+authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
+requires-python = "~=3.10"
+dependencies = [
+    "thirdweb-ai[agentkit]",
+    "coinbase-agentkit>=0.1.0,<0.2",
+    "coinbase-agentkit-langchain>=0.1.0,<0.2",
+    "langchain-openai>=0.3.8,<0.4",
+    "langgraph>=0.3.11,<0.4",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-thirdweb-ai = { version = "*", extras = ["agentkit"] }
-coinbase-agentkit = "^0.1.0"
-coinbase-agentkit-langchain = "^0.1.0"
-langchain-openai = "^0.3.8"
-langgraph = "^0.3.11"
+[tool.uv]
+package = false
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api" 
+requires = ["hatchling"]
+build-backend = "hatchling.build"
