--- a/python/examples/adapter_langchain/pyproject.toml
+++ b/python/examples/adapter_langchain/pyproject.toml
@@ -1,16 +1,18 @@
-[tool.poetry]
+[project]
 name = "thirdweb-ai-examples-langchain"
 version = "0.1.0"
 description = "Example of using thirdweb_ai with LangChain"
-authors = ["thirdweb <support@thirdweb.com>"]
-package-mode = false
+authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
+requires-python = "~=3.10"
+dependencies = [
+    "thirdweb-ai[langchain]",
+    "langchain>=0.3.0,<0.4",
+    "langchain-openai>=0.3.0,<0.4",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-thirdweb-ai = {version = "*", extras = ["langchain"]}
-langchain = "^0.3.0"
-langchain-openai = "^0.3.0"
+[tool.uv]
+package = false
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api" 
+requires = ["hatchling"]
+build-backend = "hatchling.build"
