--- a/python/examples/adapter_mcp/pyproject.toml
+++ b/python/examples/adapter_mcp/pyproject.toml
@@ -1,15 +1,17 @@
-[tool.poetry]
+[project]
 name = "thirdweb-ai-examples-mcp"
 version = "0.1.0"
 description = "Example of using thirdweb_ai with MCP Server"
-authors = ["thirdweb <support@thirdweb.com>"]
-package-mode = false
+authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
+requires-python = "~=3.10"
+dependencies = [
+    "thirdweb-ai[mcp]",
+    "mcp>=1.0.0,<2",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-thirdweb-ai = {version = "*", extras = ["mcp"]}
-mcp = "^1.0.0"
+[tool.uv]
+package = false
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api" 
+requires = ["hatchling"]
+build-backend = "hatchling.build"
