--- a/python/examples/adapter_openai/pyproject.toml
+++ b/python/examples/adapter_openai/pyproject.toml
@@ -1,15 +1,17 @@
-[tool.poetry]
+[project]
 name = "thirdweb-ai-examples-openai"
 version = "0.1.0"
 description = "Example of using thirdweb_ai with OpenAI's agents framework"
-authors = ["thirdweb <support@thirdweb.com>"]
-package-mode = false
+authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
+requires-python = "~=3.10"
+dependencies = [
+    "thirdweb-ai[openai]",
+    "openai-agents>=0.0.4,<0.0.5",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-thirdweb-ai = {version = "*", extras = ["openai"]}
-openai-agents = "^0.0.4"
+[tool.uv]
+package = false
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api" 
+requires = ["hatchling"]
+build-backend = "hatchling.build"
