--- a/python/examples/adapter_pydantic_ai/pyproject.toml
+++ b/python/examples/adapter_pydantic_ai/pyproject.toml
@@ -1,16 +1,17 @@
-[tool.poetry]
+[project]
 name = "thirdweb-ai-examples-pydantic-ai"
 version = "0.1.0"
 description = "Example of using thirdweb_ai with Pydantic AI"
-authors = ["thirdweb <support@thirdweb.com>"]
-package-mode = false
+authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
+requires-python = "~=3.10"
+dependencies = [
+    "thirdweb-ai[pydantic-ai]",
+    "pydantic-ai>=0.0.39,<0.0.40",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-thirdweb-ai = {version = "*", extras = ["pydantic-ai"]}
-pydantic-ai = "^0.0.39"
-
+[tool.uv]
+package = false
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api" 
+requires = ["hatchling"]
+build-backend = "hatchling.build"
