--- a/python/thirdweb-ai/pyproject.toml
+++ b/python/thirdweb-ai/pyproject.toml
@@ -1,32 +1,70 @@
-[tool.poetry]
+[project]
 name = "thirdweb-ai"
 version = "0.1.4"
 description = "thirdweb AI"
-authors = ["thirdweb <support@thirdweb.com>"]
-license = "Apache-2.0"
+authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
+requires-python = ">=3.10,<4.0"
 readme = "README.md"
-keywords = ["thirdweb", "sdk", "crypto", "agent", "ai", "web3", "onchain"]
-packages = [{include = "thirdweb_ai", from = "src"}]
+license = "Apache-2.0"
+keywords = [
+    "thirdweb",
+    "sdk",
+    "crypto",
+    "agent",
+    "ai",
+    "web3",
+    "onchain",
+]
+dependencies = [
+    "pydantic>=2.10.6,<3",
+    "jsonref>=1.1.0,<2",
+    "httpx>=0.28.1,<0.29",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.10,<4.0"
-pydantic = "^2.10.6"
-jsonref = "^1.1.0"
-httpx = "^0.28.1"
-openai-agents = {version = ">=0.0.1", optional = true}
-autogen-core = {version = ">=0.4.0", optional = true}
-mcp = {version = ">=1.3.0", optional = true}
-langchain-core = {version = ">=0.3.0", optional = true}
-llama-index-core = {version = ">=0.12.0", optional = true}
-goat-sdk = { version = ">=0.1.0", optional = true }
-smolagents = {version = ">=1.10.0", optional = true}
-pydantic-ai = {version = ">=0.0.39", optional = true}
-coinbase-agentkit = {version = "^0.1.0", optional = true}
+[project.optional-dependencies]
+all = [
+    "langchain-core>=0.3.0",
+    "goat-sdk>=0.1.0",
+    "openai-agents>=0.0.1",
+    "autogen-core>=0.4.0",
+    "llama-index-core>=0.12.0",
+    "coinbase-agentkit>=0.1.0,<0.2",
+    "mcp>=1.3.0",
+    "smolagents>=1.10.0",
+    "pydantic-ai>=0.0.39",
+]
+langchain = ["langchain-core>=0.3.0"]
+goat = ["goat-sdk>=0.1.0"]
+openai = ["openai-agents>=0.0.1"]
+autogen = ["autogen-core>=0.4.0"]
+llama-index = ["llama-index-core>=0.12.0"]
+agentkit = ["coinbase-agentkit>=0.1.0,<0.2"]
+mcp = ["mcp>=1.3.0"]
+smolagents = ["smolagents>=1.10.0"]
+pydantic-ai = ["pydantic-ai>=0.0.39"]
 
+[dependency-groups]
+dev = [
+    "ruff>=0.9.10,<0.10",
+    "pyright>=1.1.396,<2",
+    "pytest>=7.4.0,<8",
+    "pytest-asyncio>=0.23.5,<0.24",
+    "pytest-mock>=3.12.0,<4",
+    "pytest-cov>=4.1.0,<5",
+]
 
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.9.10"
-pyright = "^1.1.396"
+[tool.hatch.build.targets.sdist]
+include = ["src/thirdweb_ai"]
+
+[tool.hatch.build.targets.wheel]
+include = ["src/thirdweb_ai"]
+
+[tool.hatch.build.targets.wheel.sources]
+"src/thirdweb_ai" = "thirdweb_ai"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.pyright]
 include = ["src"]
@@ -67,18 +105,9 @@ ignore = [
 [tool.ruff.lint.isort]
 known-first-party = ["thirdweb_ai"]
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.extras]
-all = ["langchain-core", "goat-sdk", "openai-agents", "autogen-core", "llama-index-core", "coinbase-agentkit", "mcp", "smolagents", "pydantic-ai"]
-langchain = ["langchain-core"]
-goat = ["goat-sdk"]
-openai = ["openai-agents"]
-autogen = ["autogen-core"]
-llama-index = ["llama-index-core"]
-agentkit = ["coinbase-agentkit"]
-mcp = ["mcp"]
-smolagents = ["smolagents"]
-pydantic-ai = ["pydantic-ai"]
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts = "-v --cov=thirdweb_ai --cov-report=term-missing"
+testpaths = [
+    "tests",
+]
