--- a/python/thirdweb-mcp/pyproject.toml
+++ b/python/thirdweb-mcp/pyproject.toml
@@ -1,25 +1,32 @@
-[tool.poetry]
+[project]
 name = "thirdweb-mcp"
 version = "0.1.7"
 description = "thirdweb MCP"
-authors = ["thirdweb <support@thirdweb.com>"]
-license = "Apache-2.0"
+authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
+requires-python = "~=3.10"
 readme = "README.md"
-packages = [{ include = "src" }]
+license = "Apache-2.0"
+dependencies = [
+    "mcp>=1.3.0,<2",
+    "click>=8.1.8,<9",
+    "thirdweb-ai[mcp]==0.1.4",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-mcp = "^1.3.0"
-click = "^8.1.8"
-thirdweb-ai = {version = "0.1.4", extras = ["mcp"]}
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.9.10"
-pyright = "^1.1.396"
-
-[tool.poetry.scripts]
+[project.scripts]
 thirdweb-mcp = "src.mcp:main"
 
+[dependency-groups]
+dev = [
+    "ruff>=0.9.10,<0.10",
+    "pyright>=1.1.396,<2",
+]
+
+[tool.hatch.build.targets.sdist]
+include = ["src"]
+
+[tool.hatch.build.targets.wheel]
+include = ["src"]
+
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
