--- a/.github/workflows/publish_pypi_thirdweb_mcp.yaml
+++ b/.github/workflows/publish_pypi_thirdweb_mcp.yaml
@@ -19,20 +19,20 @@ jobs:
     steps:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-    - name: Install Poetry
-      run: pipx install poetry==1.8.5
+    - name: Install uv
+      uses: astral-sh/setup-uv@22695119d769bdb6f7032ad67b9bca0ef8c4a174 # v5
 
-    - name: Set up Python 3.10
+    - name: Install Python
       uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5.4.0
       with:
-        python-version: '3.10'
-        cache: 'poetry'
+        enable-cache: true
+        cache-dependency-glob: "uv.lock" # Update cache if uv.lock changes
 
-    - name: Install dependencies
-      run: poetry install --only main
+    - name: Install the project
+      run: uv sync
 
     - name: Build package
-      run: poetry build
+      run: uv build
 
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
