--- a/python/thirdweb-mcp/pyproject.toml
+++ b/python/thirdweb-mcp/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "thirdweb-mcp"
-version = "0.1.9"
+dynamic = ["version"]
 description = "thirdweb MCP"
 authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
 requires-python = "~=3.10"
@@ -19,6 +19,7 @@ thirdweb-mcp = "src.mcp:main"
 dev = [
     "ruff>=0.9.10,<0.10",
     "pyright>=1.1.396,<2",
+    "python-semantic-release>=8.7.0,<9",
 ]
 
 [tool.hatch.build.targets.sdist]
@@ -30,3 +31,19 @@ include = ["src"]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.semantic_release]
+version_variable = ["src/mcp.py:__version__"]
+branch = "main"
+upload_to_pypi = false
+upload_to_release = false
+build_command = "uv build"
+commit_subject = "chore: release thirdweb-mcp {version}"
+commit_message = "Release thirdweb-mcp version {version}"
+changelog_sections = [
+    {"type", "feat", "section", "Features"},
+    {"type", "fix", "section", "Bug Fixes"},
+    {"type", "perf", "section", "Performance Improvements"},
+    {"type", "refactor", "section", "Code Refactoring"},
+]
+major_on_zero = false
