add dry-run options

--- a/.github/workflows/publish_both_to_pypi.yaml
+++ b/.github/workflows/publish_both_to_pypi.yaml
@@ -12,6 +12,11 @@ on:
           - patch
           - minor
           - major
+      dry_run:
+        description: 'Dry run (no actual publishing)'
+        required: true
+        default: true
+        type: boolean
 
 jobs:
   prepare-and-validate:
@@ -74,6 +79,7 @@ jobs:
     outputs:
       ai_version: ${{ steps.ai-version.outputs.version }}
       mcp_version: ${{ steps.mcp-version.outputs.version }}
+      is_dry_run: ${{ inputs.dry_run }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -128,7 +134,14 @@ jobs:
             PATCH=$((PATCH+1))
           fi
           
-          NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+          # For dry run, add -test suffix
+          if [[ "${{ inputs.dry_run }}" == "true" ]]; then
+            NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-test"
+            echo "Running in dry-run mode, using version suffix '-test'"
+          else
+            NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+          fi
+          
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
           
       - name: Update thirdweb-ai version
@@ -148,7 +161,27 @@ jobs:
           
           echo "Updated thirdweb-mcp version to $NEW_VERSION and dependency on thirdweb-ai"
         
-      - name: Commit version changes
+      # For dry run we create a special dry-run branch instead of pushing to main
+      - name: Commit version changes (dry run)
+        if: ${{ inputs.dry_run == 'true' }}
+        run: |
+          NEW_VERSION="${{ steps.calc-versions.outputs.new_version }}"
+          BRANCH_NAME="dry-run/release-$NEW_VERSION"
+          
+          # Create and switch to new branch
+          git checkout -b $BRANCH_NAME
+          
+          git add python/thirdweb-ai/src/thirdweb_ai/__init__.py
+          git add python/thirdweb-mcp/src/mcp.py
+          git add python/thirdweb-mcp/pyproject.toml
+          git commit -m "test: prepare release v$NEW_VERSION for both packages (DRY RUN)"
+          git push --set-upstream origin $BRANCH_NAME
+          
+          echo "Created dry run branch: $BRANCH_NAME"
+          
+      # Only run for actual releases
+      - name: Commit version changes (actual release)
+        if: ${{ inputs.dry_run != 'true' }}
         run: |
           NEW_VERSION="${{ steps.calc-versions.outputs.new_version }}"
           git add python/thirdweb-ai/src/thirdweb_ai/__init__.py
@@ -157,7 +190,18 @@ jobs:
           git commit -m "chore: prepare release v$NEW_VERSION for both packages"
           git push
           
-      - name: Create version tags
+      # Create test tags with a "dry-run" prefix
+      - name: Create version tags (dry run)
+        if: ${{ inputs.dry_run == 'true' }}
+        run: |
+          NEW_VERSION="${{ steps.calc-versions.outputs.new_version }}"
+          git tag "dry-run/thirdweb-ai-v$NEW_VERSION"
+          git tag "dry-run/thirdweb-mcp-v$NEW_VERSION"
+          git push --tags
+          
+      # Only create real tags for actual releases
+      - name: Create version tags (actual release)
+        if: ${{ inputs.dry_run != 'true' }}
         run: |
           NEW_VERSION="${{ steps.calc-versions.outputs.new_version }}"
           git tag "thirdweb-ai-v$NEW_VERSION"
@@ -172,14 +216,22 @@ jobs:
         id: mcp-version
         run: echo "version=${{ steps.calc-versions.outputs.new_version }}" >> $GITHUB_OUTPUT
 
-  publish-ai:
+  build-ai:
     needs: update-versions
     runs-on: ubuntu-latest
-    environment: PyPI
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: main
+          fetch-depth: 0
+          
+      # If dry-run, checkout the dry-run branch
+      - name: Checkout dry-run branch (dry run)
+        if: ${{ needs.update-versions.outputs.is_dry_run == 'true' }}
+        run: |
+          NEW_VERSION="${{ needs.update-versions.outputs.ai_version }}"
+          BRANCH_NAME="dry-run/release-$NEW_VERSION"
+          git fetch
+          git checkout $BRANCH_NAME
           
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -195,21 +247,39 @@ jobs:
           uv pip install build
           uv build
           
+      # Only upload artifacts in dry-run mode, don't publish to PyPI
+      - name: Upload build artifacts
+        if: ${{ needs.update-versions.outputs.is_dry_run == 'true' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: thirdweb-ai-dist
+          path: python/thirdweb-ai/dist/
+          
+      # For an actual release, publish to PyPI
       - name: Publish to PyPI
+        if: ${{ needs.update-versions.outputs.is_dry_run != 'true' }}
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: python/thirdweb-ai/dist/
           password: ${{ secrets.PYPI_API_TOKEN }}
           verbose: true
 
-  publish-mcp:
-    needs: [update-versions, publish-ai]
+  build-mcp:
+    needs: [update-versions, build-ai]
     runs-on: ubuntu-latest
-    environment: PyPI
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: main
+          fetch-depth: 0
+          
+      # If dry-run, checkout the dry-run branch
+      - name: Checkout dry-run branch (dry run)
+        if: ${{ needs.update-versions.outputs.is_dry_run == 'true' }}
+        run: |
+          NEW_VERSION="${{ needs.update-versions.outputs.mcp_version }}"
+          BRANCH_NAME="dry-run/release-$NEW_VERSION"
+          git fetch
+          git checkout $BRANCH_NAME
           
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -225,7 +295,17 @@ jobs:
           uv pip install build
           uv build
           
+      # Only upload artifacts in dry-run mode, don't publish to PyPI
+      - name: Upload build artifacts
+        if: ${{ needs.update-versions.outputs.is_dry_run == 'true' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: thirdweb-mcp-dist
+          path: python/thirdweb-mcp/dist/
+          
+      # For an actual release, publish to PyPI
       - name: Publish to PyPI
+        if: ${{ needs.update-versions.outputs.is_dry_run != 'true' }}
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: python/thirdweb-mcp/dist/
@@ -233,7 +313,9 @@ jobs:
           verbose: true
 
   create-github-release:
-    needs: [update-versions, publish-ai, publish-mcp]
+    needs: [update-versions, build-ai, build-mcp]
+    # Only run for actual releases, not dry runs
+    if: ${{ needs.update-versions.outputs.is_dry_run != 'true' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -254,3 +336,34 @@ jobs:
             
             Both packages are available on PyPI.
           generate_release_notes: true
+          
+  # New job to create a dry run summary
+  dry-run-summary:
+    needs: [update-versions, build-ai, build-mcp]
+    if: ${{ needs.update-versions.outputs.is_dry_run == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        
+      - name: Generate dry run report
+        run: |
+          echo "# Dry Run Summary" > dry_run_report.md
+          echo "" >> dry_run_report.md
+          echo "## Version Information" >> dry_run_report.md
+          echo "- thirdweb-ai version: ${{ needs.update-versions.outputs.ai_version }}" >> dry_run_report.md
+          echo "- thirdweb-mcp version: ${{ needs.update-versions.outputs.mcp_version }}" >> dry_run_report.md
+          echo "" >> dry_run_report.md
+          echo "## Dry Run Details" >> dry_run_report.md
+          echo "- Branch: dry-run/release-${{ needs.update-versions.outputs.ai_version }}" >> dry_run_report.md
+          echo "- Tags created:" >> dry_run_report.md
+          echo "  - dry-run/thirdweb-ai-v${{ needs.update-versions.outputs.ai_version }}" >> dry_run_report.md
+          echo "  - dry-run/thirdweb-mcp-v${{ needs.update-versions.outputs.mcp_version }}" >> dry_run_report.md
+          echo "" >> dry_run_report.md
+          echo "## Next Steps" >> dry_run_report.md
+          echo "To proceed with an actual release, run the workflow again with dry_run set to false." >> dry_run_report.md
+          
+      - name: Upload dry run report
+        uses: actions/upload-artifact@v3
+        with:
+          name: dry-run-report
+          path: dry_run_report.md
