--- a/python/thirdweb-mcp/pyproject.toml
+++ b/python/thirdweb-mcp/pyproject.toml
@@ -22,6 +22,9 @@ dev = [
     "python-semantic-release>=8.7.0,<9",
 ]
 
+[tool.hatch.version]
+path = "src/thirdweb_mcp/__init__.py"
+
 [tool.hatch.build.targets.sdist]
 include = ["src"]
 
@@ -41,9 +44,9 @@ build_command = "uv build"
 commit_subject = "chore: release thirdweb-mcp {version}"
 commit_message = "Release thirdweb-mcp version {version}"
 changelog_sections = [
-    {"type", "feat", "section", "Features"},
-    {"type", "fix", "section", "Bug Fixes"},
-    {"type", "perf", "section", "Performance Improvements"},
-    {"type", "refactor", "section", "Code Refactoring"},
+    {"type" = "feat", "section" = "Features"},
+    {"type" = "fix", "section" = "Bug Fixes"},
+    {"type" = "perf", "section" = "Performance Improvements"},
+    {"type" = "refactor", "section" = "Code Refactoring"},
 ]
 major_on_zero = false
