--- a/python/thirdweb-ai/pytest.ini
+++ b/python/thirdweb-ai/pytest.ini
@@ -9,5 +9,5 @@ markers =
     unit: Unit tests
     integration: Integration tests
 
-# Configure verbosity
-addopts = -v
+# Configure verbosity and coverage
+addopts = -v --cov=src/thirdweb_ai --cov-report=term --cov-report=html
