--- a/python/thirdweb-ai/pyproject.toml
+++ b/python/thirdweb-ai/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "httpx>=0.28.1,<0.29",
     "langchain-core>=0.3.47",
     "llama-index-core>=0.12.25",
+    "pytest-cov>=4.1.0",
 ]
 
 [project.optional-dependencies]
