--- a/python/thirdweb-ai/pyproject.toml
+++ b/python/thirdweb-ai/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pydantic>=2.10.6,<3",
     "jsonref>=1.1.0,<2",
     "httpx>=0.28.1,<0.29",
+    "aiohttp>=3.11.14",
 ]
 
 [project.optional-dependencies]
@@ -51,6 +52,7 @@ dev = [
     "pytest-asyncio>=0.23.5,<0.24",
     "pytest-mock>=3.12.0,<4",
     "pytest-cov>=4.1.0,<5",
+    "ipython>=8.34.0",
 ]
 
 [tool.hatch.build.targets.sdist]
