--- a/.github/workflows/publish_pypi_thirdweb_mcp.yaml
+++ b/.github/workflows/publish_pypi_thirdweb_mcp.yaml
@@ -23,15 +23,15 @@ jobs:
       run:
         working-directory: ./python/thirdweb-mcp
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
       
       - name: Install uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@22695119d769bdb6f7032ad67b9bca0ef8c4a174 # v5
       
       - name: Install Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5.4.0
         with:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
