--- a/python/thirdweb-ai/pyproject.toml
+++ b/python/thirdweb-ai/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "jsonref>=1.1.0,<2",
     "httpx>=0.28.1,<0.29",
     "aiohttp>=3.11.14",
+    "web3>=7.9.0",
 ]
 
 [project.optional-dependencies]
