add various improvements for tools (#26)
* add utils for validating hashes

* ruff formatting

* ensure chain_id is consistent

* simplify tool calling

* add web3 for address validation

* ruff format

* add Literal for known inputs

* allow response_format to be added to Nebula tools

* filter event and transaction outputs

* allow chain_id to be None

* default to ethereum with insight

* update versions

--- a/python/thirdweb-ai/pyproject.toml
+++ b/python/thirdweb-ai/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "thirdweb-ai"
-version = "0.1.9"
+version = "0.1.10"
 description = "thirdweb AI"
 authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
 requires-python = ">=3.10,<4.0"
@@ -20,6 +20,7 @@ dependencies = [
     "jsonref>=1.1.0,<2",
     "httpx>=0.28.1,<0.29",
     "aiohttp>=3.11.14",
+    "web3>=7.9.0",
 ]
 
 [project.optional-dependencies]
