--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,11 +35,20 @@ jobs:
           cd python/thirdweb-ai
           uv build
       
-      - name: Publish to PyPI
+      - name: Publish AI to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
-          packages-dir: python/thirdweb-mcp/dist python/thirdweb-ai/dist
+          packages-dir: python/thirdweb-ai/dist
+          verbose: true
+          skip-existing: true
+
+      - name: Publish MCP to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
+          packages-dir: python/thirdweb-mcp/dist
           verbose: true
           skip-existing: true
