--- a/python/thirdweb-ai/pyproject.toml
+++ b/python/thirdweb-ai/pyproject.toml
@@ -27,6 +27,7 @@ all = [
     "mcp>=1.3.0",
     "smolagents>=1.10.0",
     "pydantic-ai>=0.0.39",
+    "google-adk>=1.0.0"
 ]
 langchain = ["langchain-core>=0.3.0"]
 goat = ["goat-sdk>=0.1.0"]
@@ -37,6 +38,7 @@ agentkit = ["coinbase-agentkit>=0.1.0,<0.2"]
 mcp = ["mcp>=1.3.0"]
 smolagents = ["smolagents>=1.10.0"]
 pydantic-ai = ["pydantic-ai>=0.0.39"]
+google-adk = ["google-adk>=1.0.0", "litellm>=v1.70.0"]
 
 [dependency-groups]
 dev = [
@@ -84,6 +86,8 @@ dependencies = [
 [tool.uv-dynamic-versioning]
 vcs = "git"
 style = "semver"
+format = "{base}"
+dev_mode = "env:THIRDWEB_DEV_MODE"
 
 [tool.pyright]
 include = ["src"]
