--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -51,7 +51,4 @@ jobs:
         run: uv run ruff format --check .
 
       - name: Run Pyright check
-        uses: jakebailey/pyright-action@b5d50e5cde6547546a5c4ac92e416a8c2c1a1dfe # v2.3.2
-        with:
-          version: PATH
-          working-directory: ./python/${{ matrix.project }}
+        run: uv run pyright src/
